# wadu

./: Cargo.toml  README.md
src/: cli.rs  error.rs  lib.rs  main.rs  runner.rs  snap.rs
src/gist/: fetch.rs  identifier.rs  mod.rs
