[package]
name = "wadu"
version = "0.1.0"
authors = ["Blas Rodriguez Irizar <rodrigblas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "1.5.4", features = ["json"] }
thiserror = "1.0.22"
anyhow = "1.0.35"
url = "2.2.0"
structopt = "0.3.21"